syntax = 'proto3';

package grpc;
option go_package = "/grpc";


service Auth {
  rpc CheckUserPassword(CheckRequest) returns (CheckResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByID(GetUserRequest) returns (GetUserResponse);
}

message GetUserResponse {
  User user = 1;
}

message GetUserRequest {
  int32 UID = 1;
}

message User {
  string phone_number = 5;
  string email = 1;
  string password =2;
  int32 UID = 3;
  string full_name =4;
}

message CreateUserRequest {
  User user = 1;
}
message CreateUserResponse {
  int32 UID = 1;
}

message CheckRequest {
  string email = 1;
  string password = 2;
}

message CheckResponse {
  int32 ID = 1;
}